// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tests Button renders correctly 1`] = `
<button
  className="sc-bdVaJa jgwijM"
  onClick={[Function]}
>
  Default Button
</button>
`;

exports[`Button tests Contained button renders correctly 1`] = `
<button
  className="sc-bdVaJa sc-ifAKCX cLkDai"
  color="#FFFFFF"
  onClick={[Function]}
>
  Contained Button
</button>
`;

exports[`Button tests Fab button renders correctly 1`] = `
<button
  className="sc-bdVaJa sc-EHOje kKWnVJ"
  color="#FFFFFF"
  onClick={[Function]}
>
  Fab Button
</button>
`;

exports[`Button tests Outline button renders correctly 1`] = `
<button
  className="sc-bdVaJa sc-htpNat eaiRlt"
  color="#FFFFFF"
  onClick={[Function]}
>
  Outline Button
</button>
`;

exports[`Button tests Text button renders correctly 1`] = `
<button
  className="sc-bdVaJa sc-bwzfXH ktMNKV"
  color="#FFFFFF"
  onClick={[Function]}
>
  Text Button
</button>
`;

exports[`Button tests Toggle button renders correctly 1`] = `
<button
  className="sc-bdVaJa sc-bxivhb eiWEvW"
  color="#FFFFFF"
  onClick={[Function]}
>
  Toggle Button
</button>
`;
